--- a/src/WEB INF/index.html
+++ b/src/WEB INF/index.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Titulo do Cruzeiro</title>
+        <title>Titulo meu - Jonatanzinho</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
